--- a/views/user/productDetail.ejs
+++ b/views/user/productDetail.ejs
@@ -103,7 +103,7 @@
               <span class="block font-medium">
                 <%= variant.size %>
               </span>
-              <span class="block text-sm text-gray-500">Stock: <%= variant.stock %></span>
+              <span class="block text-sm text-gray-500 hidden">Stock: <%= variant.stock %></span>
             </button>
             <% }) %>
         </div>
@@ -111,31 +111,25 @@
       </div>
 
       <!-- Actions -->
-      <div class="flex gap-4 mb-6">
+      
+  <div class="flex gap-4 mb-6">
+    <% if (product.isExistingInCart) { %>
+  
+      <a href="/cart"
+        class="px-6 py-3 border-gray-50 rounded-xl w-40 bg-yellow-500 text-black hover:bg-yellow-600 shadow-md text-center inline-block">
+        Go to Cart
+      </a>
+      <% } else { %>
+     
         <form id="addToCartForm" action="/cart/add" method="POST">
           <input type="hidden" name="productId" value="<%= product._id %>">
-          <input type="hidden" id="variantId" name="variantId" value="<%= product.variants[0]._id %>">
-          <% if (typeof csrfToken !=='undefined' ) { %>
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <% } %>
-              <!-- <div class="flex items-center gap-3 mb-4"> -->
-                <!-- <label class="font-medium">Quantity:</label>
-                <div class="flex items-center border border-gray-200 rounded-lg">
-                  <button type="button" id="decrease"
-                    class="px-1.5 py-1 bg-white rounded-l-lg hover:bg-gray-200 text-gray-500 font-bold">−</button> -->
-                  <!-- <input type="number" id="quantity" name="quantity" value="1" min="1"
-                    max="<%= product.variants[0].stock %>"
-                    class="w-9 py-1 border-0 text-center outline-none hide-arrows" />
-                  <button type="button" id="increase"
-                    class="px-1.5 py-1 rounded-r-lg bg-white hover:bg-gray-200 text-yellow-500 font-bold">+</button> -->
-                <!-- </div> -->
-              </div>
-              <button type="submit" id="addToCartBtn"
+          <input type="hidden" id="variantId" name="variantId" value="<%= product.variants[0]?._id %>">
+         <button type="submit" id="addToCartBtn"
                 class="px-6 py-3 border-gray-50 rounded-xl w-40 bg-yellow-500 text-gray-900 hover:bg-yellow-600 shadow-md">
                 Add to Cart
               </button>
         </form>
-        
+        <% } %>
       </div>
 
       <!-- Description -->
@@ -194,9 +188,6 @@
                 <form action="/cart/add" method="POST">
                   <input type="hidden" name="productId" value="<%= rp._id %>">
                   <input type="hidden" name="quantity" value="1">
-                  <% if (typeof csrfToken !=='undefined' ) { %>
-                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <% } %>
                       <button type="submit"
                         class="text-gray-900 bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-xs px-3 py-1.5 text-center">
                         Add to cart
